# fg-manager

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/crawler/: cleaner.ts  package.json  tsconfig.json
apps/crawler/src/: ai-parse.ts  crawl.ts  cron.ts  index.ts  parse.ts  testParser.ts  uploader.ts  utils.ts
apps/crawler/src/models/: Post.ts
apps/desktop/: .gitignore  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  check.txt  check_errors.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: fuckingfast.rs  lib.rs  rate_limiter.rs  torrent.rs
apps/desktop/src/components/: app-sidebar.tsx  download-task-row.tsx  fps-overlay.tsx  game-card.tsx  nav-main.tsx
apps/desktop/src/components/ui/: cached-image.tsx  progress.tsx
apps/desktop/src/i18n/: translations.ts  useI18n.ts
apps/desktop/src/lib/: utils.ts
apps/desktop/src/lib/downloads/: manager.ts  types.ts
apps/desktop/src/lib/downloads/adapters/: fuckingfast.ts  native.ts  qbittorrent.ts
apps/desktop/src/routes/: DownloadsView.tsx  GameDetailView.tsx  GamesCatalog.tsx  LibraryView.tsx  SettingsView.tsx
apps/desktop/src/store/: useGamesStore.ts
apps/desktop/src/stores/: downloadStore.ts  settingsStore.ts
