[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
librqbit = "8.1.1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
regex = "1.12.3"
futures-util = "0.3.32"
tauri-plugin-dialog = "2.6.0"
unrar = "0.5.8"
tauri-plugin-updater = "2.10.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-http = "2.5.7"
